VERSION 2 Работает бот