@@ -1,27 +1,41 @@
 package io.zolotarev.superbot.service;
 import io.zolotarev.superbot.handler.Handler;
-import netscape.javascript.JSObject;
+import lombok.NonNull;
+
 import org.springframework.stereotype.Component;
 import io.zolotarev.superbot.config.BotConfig;
+import io.zolotarev.superbot.dao.SchoolUsersDAO;
+import io.zolotarev.superbot.dao.ImagesDAO;
+
 
 import org.telegram.telegrambots.bots.TelegramLongPollingBot;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Update;
+
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardRow;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
+
+// import com.nimbusds.jose.Header;
+
 import org.telegram.telegrambots.meta.api.objects.PhotoSize;
 import org.telegram.telegrambots.meta.api.methods.send.SendPhoto;
+
+import org.telegram.telegrambots.meta.api.objects.stickers.Sticker;
+import org.telegram.telegrambots.meta.api.methods.send.SendSticker;
+import org.telegram.telegrambots.meta.api.objects.InputFile;
+import org.telegram.telegrambots.meta.api.objects.Message;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.http.*;
 import java.net.http.HttpResponse.BodyHandlers;
 import org.telegram.telegrambots.meta.api.methods.GetFile;
-import net.minidev.json.JSONObject;
+// import net.minidev.json.JSONObject;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
@@ -30,6 +44,9 @@ import java.util.Objects;
 import java.util.HashMap;
 import java.util.Random;
 import java.util.Comparator;
+
+import java.util.ArrayList;
+import java.util.List;
 
 import static org.apache.commons.io.FileUtils.getFile;
 
@@ -42,6 +59,7 @@ public class TelegramBot extends TelegramLongPollingBot {
     HashMap<String, Handler> userLinkObject = new HashMap<>();
     boolean f_is;
     Handler handler;
+    int indexJava;
 
     String yaDiscURL = "https://cloud-api.yandex.net/v1/disk/";
 
@@ -62,83 +80,100 @@ public class TelegramBot extends TelegramLongPollingBot {
         return config.getToken();
     }
 
+    private SchoolUsersDAO schoolUsersDAO  = new SchoolUsersDAO();
+    private ImagesDAO imagesDAO  = new ImagesDAO();
 
-    public void getRandomString() {
 
-        int leftLimit = 97; // letter 'a'
-        int rightLimit = 122; // letter 'z'
-        int targetStringLength = 10;
-        Random random = new Random();
-        StringBuilder buffer = new StringBuilder(targetStringLength);
-        for (int i = 0; i < targetStringLength; i++) {
-            int randomLimitedInt = leftLimit + (int)
-                    (random.nextFloat() * (rightLimit - leftLimit + 1));
-            buffer.append((char) randomLimitedInt);
-        }
-        String generatedString = buffer.toString();
-
-        System.out.println(generatedString);
-    }
 
     @Override
     public void onUpdateReceived(Update update){
-        if (update.getMessage().hasPhoto()){
-            long chatId = update.getMessage().getChatId();
-            try {
-                sendMessage(chatId, "Это файл!");
+        
+        // if(update.hasMessage() && update.getMessage().hasText()){
+        //     String messageText = update.getMessage().getText();
+        //     long chatId = update.getMessage().getChatId();
+        //     String lastName =  returnStringOrNull(update.getMessage().getChat().getLastName());
+        //     String firstName = returnStringOrNull(update.getMessage().getChat().getFirstName());
+        //     String userName =  returnStringOrNull(update.getMessage().getChat().getUserName());
+        //     String titleChat = returnStringOrNull(update.getMessage().getChat().getTitle());
+        //     // long messageId = update.getMessage().getMessageId();
+        //     // String adminChatId = String.valueOf("-1001530953532");
+        //     // String message = "*Сообщение от "+lastName+" "+firstName+" "+userName+" "+".* \n*В чате:* "+titleChat+" \n*Текст:* \n"+messageText+" \n";
+        //     // if(lastName != "Золотарева")
+        //     // {
+        //     //     try {
+        //     //         sendMessage(adminChatId, message);
+        //     //     } catch (TelegramApiException e) {
+        //     //         e.printStackTrace();
+        //     //     }
+        //     // }
+            
+        // }
 
-                //Работа с фото из бота
-                sendMessage(chatId, "Начинаю загрузку...!");
-                List<PhotoSize> photos = update.getMessage().getPhoto();
-                PhotoSize photo = photos.get(0);
-                String fileId = photo.getFileId();
-                String fileNamwe = "MyFirstPhoto";
-                String botToken = getBotToken();
+        // 1001530953532
+        // 1001633011508
 
-                URL url = new URL("https://api.telegram.org/bot"+botToken+"/getFile?file_id="+fileId);
-                BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream()));
-                String getFileResponse = br.readLine();
+//         if (update.getMessage().hasPhoto()){
+//             long chatId = update.getMessage().getChatId();
+//             String lastName =  update.getMessage().getChat().getLastName();
+//             String firstName = update.getMessage().getChat().getFirstName();
+//             String userName =  update.getMessage().getChat().getUserName();
+//             String nickName = userName+"_"+firstName+"_"+lastName;
 
-//                https://yandex.ru/video/preview/2052560887994171178
-//                https://yandex.ru/video/preview/3339900611007758351
+//             // System.out.println("****!****");
+//             // System.out.println(nickName);
+//             // System.out.println("****!****");
 
+//             try {
+//                 if(schoolUsersDAO.isUserRegisterByNickName(nickName))
+//                 {
+//                     try {
+//                         sendMessage(chatId, "Ловлю файл!");
 
+//                         //Работа с фото из бота
+//                         sendMessage(chatId, "Начинаю загрузку только первого файла!");
+//                         List<PhotoSize> photos = update.getMessage().getPhoto();
+//                         PhotoSize photo = photos.get(0);
+//                         String fileId = photo.getFileId();
+//                         String filePath = photo.getFilePath();
+//                         String botToken = getBotToken();
 
-
-                System.out.println("-----");
-                System.out.println(photos.get(0));
-                System.out.println(photos.size());
-                System.out.println(photo.getFilePath());
-                System.out.println("https://api.telegram.org/bot"+botToken+"/getFile?file_id="+fileId);
-                System.out.println("-----");
-
-
-                HttpClient client = HttpClient.newHttpClient();
-                HttpRequest request = HttpRequest.newBuilder()
-                        .GET()
-                        .uri(URI.create("https://cloud-api.yandex.net/v1/disk/resources?path=%2FTEST"))
-                        .header("Authorization", "OAuth y0_AgAAAAAHlGMCAAkY2gAAAADbeyOREl5n_eU3T3ykly0Beo-uxEpWPlk")
-                        .build();
-                HttpResponse<String> response = client.send(request, BodyHandlers.ofString());
-                System.out.println("Status");
-                System.out.println(response);
-
-                sendMessage(chatId, "Загрузил!");
+//                         if(imagesDAO.addImageID(nickName, fileId)){
+// //                            URL url = new URL("https://api.telegram.org/bot"+botToken+"/getFile?file_id="+fileId);
+//                             URL url = new URL("https://api.telegram.org/file/bot"+botToken+"/photos/file_1.jpg");
+//                             sendMessage(chatId, "Загрузил!");
+//                             sendMessage(chatId, "Вот ссылка "+url);
+//                             sendMessage(chatId, ""+filePath);
+//                         }
 
 
-            } catch (TelegramApiException | IOException | InterruptedException e) {
-                throw new RuntimeException(e);
-            }
-        }
+//                     } catch (TelegramApiException | IOException e) {
+//                         throw new RuntimeException(e);
+//                     }
+//                 }
+//                 else{
+//                     update.getMessage().setDeleteChatPhoto(true);
+//                     update.getMessage().getDeleteChatPhoto();
+//                     sendMessage(chatId, "Прости, нет регистрации. Обратись к Надежде Алексеевне");
+
+//                 }
+//             } catch (SQLException e) {
+//                 throw new RuntimeException(e);
+//             } catch (TelegramApiException e) {
+//                 throw new RuntimeException(e);
+//             }
+
+
+//         }
 
         if(update.hasMessage() && update.getMessage().hasText())
         {
            String messageText = update.getMessage().getText();
-           long chatId = update.getMessage().getChatId();
+           Long chatId = update.getMessage().getChatId();
            String lastName =  update.getMessage().getChat().getLastName();
            String firstName = update.getMessage().getChat().getFirstName();
            String userName =  update.getMessage().getChat().getUserName();
            String userTag = userName+"_"+firstName+"_"+lastName;
+           int indexPolls = messageText.indexOf("Начать опрос");
            handler = getHandlerUser(userTag);
 
            if(handler.getState() ==  1)
@@ -161,80 +196,129 @@ public class TelegramBot extends TelegramLongPollingBot {
                    throw new RuntimeException(e);
                }
             }else{
-               switch (messageText){
-                   case "/start":
-                       try {
-                           startCommandReceived(chatId, update.getMessage().getChat().getFirstName());
-                       } catch (TelegramApiException e) {
-                           throw new RuntimeException(e);
-                       }
-                       break;
-                   case "Начать опрос":
-                       try {
-                           handler = getHandlerUser(userTag);
-                           int stateUser = handler.checkStateUser(userTag);
-                           String message = "Опрос уже пройден";
+                if(indexPolls == - 1){
+                    switch (messageText){
+                        case "/start":
+                            try {
+                                startCommandReceived(chatId, update.getMessage().getChat().getFirstName());
+                            } catch (TelegramApiException e) {
+                                throw new RuntimeException(e);
+                            }
+                            break;
+     
+                        case "SECRET_TEST_ZOLOTAREV":
+                            try {
+                                handler = getHandlerUser(userTag);
+                                handler.setPollId(1);
+                                int stateUser = handler.checkStateUser(userTag);
+                                String message = "Опрос уже пройден! ";
+                                 
+                                if(stateUser !=  1){
+                               
+                                   message = handler.pollsInit();
+                                }
+     
+                                sendMessage(chatId, message);
+                            } catch (TelegramApiException e) {
+                                throw new RuntimeException(e);
+                            } catch (SQLException e) {
+                                throw new RuntimeException(e);
+                            }
+                            break;
+                        case "/stop":
+                            try {
+                                handler.setState(0);
+                                sendMessage(chatId, "Опрос остановлен");
+                            } catch (TelegramApiException e) {
+                                throw new RuntimeException(e);
+                            }
+                            break;
+                        default:
+                            try {
+                                sendMessage(chatId, "Нет такого ключевого слова !");
+                            } catch (TelegramApiException e) {
+                                throw new RuntimeException(e);
+                            }
+                            break;
+     
+                    }
+                }else{
+                    String numberPoll = messageText.replaceAll("Начать опрос", "");
+                    try {
+                        handler = getHandlerUser(userTag);
+                        handler.setPollId(Integer.parseInt(numberPoll.trim()));
+                        int stateUser = handler.checkStateUser(userTag);
+                        String message = "Опрос уже пройден!";
+                         
+                        if(stateUser !=  1){
+                       
+                           message = handler.pollsInit();
+                        }
 
-                           if(stateUser !=  1){
-                              message = handler.pollsInit();
-                           }
+                        sendMessage(chatId, message);
+                    } catch (TelegramApiException e) {
+                        throw new RuntimeException(e);
+                    } catch (SQLException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
 
-                           sendMessage(chatId, message);
-                       } catch (TelegramApiException e) {
-                           throw new RuntimeException(e);
-                       } catch (SQLException e) {
-                           throw new RuntimeException(e);
-                       }
-                       break;
-                   case "/stop":
-                       try {
-                           handler.setState(0);
-                           sendMessage(chatId, "Опрос остановлен");
-                       } catch (TelegramApiException e) {
-                           throw new RuntimeException(e);
-                       }
-                       break;
-                   default:
-                       try {
-                           sendMessage(chatId, "Нет такого ключевого слова");
-                       } catch (TelegramApiException e) {
-                           throw new RuntimeException(e);
-                       }
-                       break;
-
-               }
+               
            }
 
 
         }
     }
 
-    private void startCommandReceived(long chatId, String name) throws TelegramApiException {
+    public String returnStringOrNull(String string){
+        if(string == null){
+            return "";
+        }
+        else{
+            return string;
+        }
+    }
+
+    private void startCommandReceived(Long chatId, String name) throws TelegramApiException {
         String answer = "Привет, "+name+"! Введи ключевое слово.";
         sendMessage(chatId, answer);
     }
 
 
 
-    private void sendMessage(long chatId, String textToSend) throws TelegramApiException {
+    private void sendMessage(Long chatId, String textToSend) throws TelegramApiException {
+
         SendMessage message = new SendMessage();
-        message.setChatId(String.valueOf(chatId));
-        message.setText(textToSend);
 
-        ReplyKeyboardMarkup keyboardMarkup = new ReplyKeyboardMarkup();
+        if(textToSend == "THE END"){
+            message.setChatId(String.valueOf(chatId));
+            message.setParseMode("Markdown");
+            message.setText("Молодец! Лови подарок!");
+            String stickerID = "CAACAgIAAxkBAAEId4BkLUlOgJloFttsZ3r0ITz9uwrNLwACQAADr8ZRGldV33CiNs2qLwQ";
+            InputFile inputFile = new InputFile(stickerID);
+            SendSticker sendSticker = new SendSticker();
+            sendSticker.setChatId(String.valueOf(chatId));
+            sendSticker.setSticker(inputFile);
+          try {
+            execute(sendSticker);
+        } catch (TelegramApiException e) {
+            e.printStackTrace();
+        }
+        }else{
+            message.setChatId(String.valueOf(chatId));
+            message.setParseMode("Markdown");
+            message.setText(textToSend);
+        }
+        
 
-        List<KeyboardRow> keyboardRows = new ArrayList<>();
-        KeyboardRow row = new KeyboardRow();
-        row.add("Начать опрос");
-        keyboardRows.add(row);
-//        row = new KeyboardRow();
-//        row.add("Test 3");
-//        row.add("Test 4");
-//        row.add("Test 5");
+//        ReplyKeyboardMarkup keyboardMarkup = new ReplyKeyboardMarkup();
 //
+//        List<KeyboardRow> keyboardRows = new ArrayList<>();
+//        KeyboardRow row = new KeyboardRow();
+//        row.add("Начать опрос");
 //        keyboardRows.add(row);
-        keyboardMarkup.setKeyboard(keyboardRows);
-        message.setReplyMarkup(keyboardMarkup);
+//        keyboardMarkup.setKeyboard(keyboardRows);
+//        message.setReplyMarkup(keyboardMarkup);
 
         try{
             execute(message);
